feat: add folder template

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,5 +5,5 @@
 @import 'style/settings';
 
 // -----------------------adding components
-@import './style/components/header';
+// @import 'components/header/header.scss';
 
