--- a/src/style/_settings.scss
+++ b/src/style/_settings.scss
@@ -13,7 +13,6 @@ html {
 body {
     background-color: $bg-color-primary;
     font-family: $font-family;
-    color: #fff;
 }
 
 .page {
@@ -30,6 +29,7 @@ body {
 }
 
 img {
+    display: block;
     height: auto;
     max-width: 100%;
     object-fit: cover;
