--- a/src/style/_var.scss
+++ b/src/style/_var.scss
@@ -1,9 +1,10 @@
 $font-family: "Roboto-Thin";
-$content-width: 1170px;
+$content-width: 737px;
 $container-offset: 15px;
 $container-width: $content-width + ($container-offset * 2);
 
-$bg-color-primary: blue;
+$bg-color-primary: #fff;
+$font-color-primary: #2a2929;
 
 // breakpoints------
 $big-laptop: 1200px;
